# TestProject_yx

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle
ios/: Project-Info.plist
qml/: Main.qml  PluginMainItem.qml  config.json
qml/helper/: Constants.qml
qml/pages/: AdMobPage.qml  KillMole.qml
qml/pages/Game2048/: Game2048.qml  GameBackground.qml  Tile.qml
qml/pages/KillMole/: KillMole.qml  KillMoleLevel.qml  打地鼠游戏设计.txt
